<resources>
    <string name="app_name">work schedule</string>
    <string name="fill_your_option_for_next_week">Fill your option for next week</string>
    <string name="day">Day</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="night">Night</string>
    <string name="_7_00_19_00">7-19sb</string>
    <string name="_19_00_7_00">19-7sl</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="send_to_whatsApp">send to whatsApp</string>
    <string name="send">send</string>
    <string name="Login">Login</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="schedule">schedule</string>
    <string name="send_schedule_for_next_week">Send Schedule for next week</string>
    <string name="employee_info">Employee info</string>
    <string name="name">Name: </string>
    <string name="user_password">User password: </string>
    <string name="cellphone">cellphone: </string>
    <string name="employee_number">Employee Number: </string>
    <string name="facility">Facility: </string>
    <string name="choose_a_date">choose a date</string>
    <string name="enter_at_least_6_characters">Enter at least 6 characters</string>
    <string name="employees">Employees</string>
    <string name="make_schedule">Make schedule</string>
    <string name="make_schedule_automatic">Make Schedule Automatic</string>
</resources>
