<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#442E35"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EmployeeMenu">

    <Button
        android:id="@+id/btShowSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:onClick="mainClick"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/btSendSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:onClick="mainClick"

        android:text="@string/send_schedule_for_next_week" />

    <Button
        android:id="@+id/btEmployeeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:onClick="mainClick"

        android:text="@string/employee_info" />

    <Button
        android:id="@+id/btmakeSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:onClick="mainClick"

        android:text="@string/make_schedule" />
</LinearLayout>