<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".optionsForNextWeek"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_your_option_for_next_week"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:layout_marginTop="14dp"
        />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp"
        android:background="#f1f1f1"
        >

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noon"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_00_19_00"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19_00_7_00"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>



        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbSundayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSundayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSundayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSunday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSunday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbMondayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbMondayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbMondayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbMonday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbMonday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbTuesdayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbTuesdayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbTuesdayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbTuesday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbTuesday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbWednesdayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbWednesdayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbWednesdayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbWednesday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbWednesday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />


        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbThursdayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbThursdayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbThursdayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbThursday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbThursday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />


        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbFridayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbFridayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbFridayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbFriday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbFriday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />


        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <CheckBox
                android:id="@+id/cbSaturdayMorning"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSaturdayNoon"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSaturdayNight"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSaturday7-19"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cbSaturday19-7"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center" />


        </TableRow>

    </TableLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btsend"
        android:layout_weight="1"

        android:gravity="center" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_whatsApp"
        android:id="@+id/btSendToWhatsApp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        />
</LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScheduleSent"
        android:layout_margin="6dp"
        />

</ScrollView>
</LinearLayout>